<resources>
    <string name="app_name">ProyectoAndroid</string>
    <string name="iniciar">Iniciar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="todos">TODO</string>
    <string name="eliminar">Eliminar</string>
    <string name="reiniciarElim">Reiniciar</string>
    <string name="fecha_de_estreno">Fecha de Estreno</string>
    <string name="nombre_pelicula">Nombre Pelicula</string>
    <string name="director">Director</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="buscar">Buscar</string>
    <string name="reiniciarbuscar">Reiniciar</string>
    <string name="fecha_de_estrenobus">Fecha de Estreno</string>
    <string name="nombre_peliculabus">Nombre Pelicula</string>
    <string name="directorbus">Director</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="anadir">Añadir</string>
    <string name="fecha_de_estrenoana">Fecha de Estreno</string>
    <string name="nombre_peliculaana">Nombre Pelicula</string>
    <string name="directorana">Director</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="g_nero">Género</string>
    <string name="generobus">Género</string>
    <string name="generoelim">Género</string>
</resources>