<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo3"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="204dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/director"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="222dp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="17dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:contentDescription="@string/todo4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciarElim"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="625dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_pelicula"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="35dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo5"
        tools:ignore="DuplicateIds,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="310dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_de_estreno"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="625dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo6"
        tools:ignore="DuplicateIds,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="111dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/generoelim"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="329dp"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>