<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo7"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="17dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="111dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:contentDescription="@string/todo8" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo9"
        tools:ignore="DuplicateIds,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="204dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo10"
        tools:ignore="DuplicateIds,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="310dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_peliculabus"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_de_estrenobus"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/directorbus"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="222dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="625dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciarbuscar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="625dp" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/generobus"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="326dp"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>