<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnadirActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo11"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="204dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/directorana"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="222dp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="17dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:contentDescription="@string/todo12" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reiniciar"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="625dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_peliculaana"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="35dp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo13"
        tools:ignore="DuplicateIds,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="310dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_de_estrenoana"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anadir"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="625dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo14"
        tools:ignore="DuplicateIds,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="111dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/g_nero"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="329dp"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>