<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="628dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="628dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="54dp"
        android:layout_height="55dp"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="20dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="54dp"
        android:layout_height="55dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="85dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:contentDescription="@string/todos" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="31dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="89dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>